Offline ability added, UI modified

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,18 +5,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Event Manager" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>MyEvents</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script>
+    if (navigator.serviceWorker) {
+      initServiceWorker().catch(console.log);
+    }
+
+    async function initServiceWorker() {
+      const swRegistration = await navigator.serviceWorker.register("./sw.js", {
+        updateViaCache: "none"
+      });
+    }
+  </script>
 </html>
